Fixed button on mobile

--- a/style.css
+++ b/style.css
@@ -49,6 +49,6 @@ a:link {
 
 @media screen and (max-width: 550px) {
     .top-button {
-        width: 19%;
+        width: 25%;
     }
 }
